# bible_graph

./: AlamoPolyglot.ipynb  README.md  neo4j.ipynb  neo4j_importer_cypher_script_2024-12-14.cypher  neo4j_importer_model_2024-12-14.json  pyproject.toml
TheographicBibleData/: chapters-Grid view.csv  events-Grid view.csv  people-completed_records.csv  peopleGroups-Grid view.csv  periods-Grid view.csv  periods.csv  places-completed_records.csv
bible-graph/: README.md  build.gradle  settings.gradle
bible-graph/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
bible-graph/src/main/java/foundonthe/net/: HelloGraphQLResource.java
