[tool.poetry]
name = "bible-graph"
version = "0.1.0"
description = "Graph database of Bible facts"
authors = ["Andre Wiradarma <awiradarma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyter = "^1.1.1"
neo4j = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
